appId: com.hank.musicfree.debug
name: smoke_core_launch_default_plugins
tags:
  - smoke
  - core
  - launch
---
- launchApp:
    stopApp: true
- tapOn:
    text: "允许|Allow|Allow notifications"
    optional: true
- extendedWaitUntil:
    visible:
      id: ".*home\\.navBar\\.search"
    timeout: 30000
- assertVisible:
    id: ".*home\\.navBar\\.menu"
- waitForAnimationToEnd:
    timeout: 5000
- takeScreenshot: smoke_core_launch_home
